Fix minor spacing issues in media screens

--- a/src/pages/Integrations/Integrations.css
+++ b/src/pages/Integrations/Integrations.css
@@ -93,12 +93,10 @@
         display: grid;
         grid-template-columns: 50% 50%;
         gap: 1rem;
+        padding: 0 2rem;
     }
 
 }
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (max-width: 992px) {}
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (max-width: 768px) {
@@ -107,7 +105,7 @@
     }
 
     .integrations__content {
-        padding: 2rem 2rem;
+        padding: 3rem 2rem;
     }
 
     .integrations__iconBox-content {
@@ -124,11 +122,6 @@
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     .integrations__content {
-        padding: 1rem 1rem;
+        padding: 3rem 1rem;
     }
-
-    .integrations__content-container h1 {
-        text-align: center;
-    }
-
 }
